@@ -48,8 +48,8 @@ class Test(BaseTest):
 
         # Wait until registry file is written
         self.wait_until(
-            lambda: self.log_contains(
-                "Registry file updated."),
+            lambda: self.log_contains_count(
+                "Registry file updated.") > 1,
             max_timeout=15)
 
         filebeat.check_kill_and_wait()
